--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
          <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
 
 	 <script>
-  hbspt.forms.create({
+  hbspt. forms.create({
     region: "na1",
     portalId: "46298854",
-    formId: "3c19d57d-6290-4517-a2a6-cd89a0d0f911"
+    formed: "3c19d57d-6290-4517-a2a6-cd89a0d0f911"
   });
   </script>
             </div>
